5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4470/executions/1798_2566.log
== TEST (2019-06-10 14:58:42) 
-- CODE:
from numpy import*
vetor=array(eval(input("FAltas:")))
segunda=0
terca=0
quarta=0
quinta=0
sexta=0
sabado=0
for i in range(size(vetor)):
	if(vetor[i]==2):
		segunda=segunda+1
	elif(vetor[i]==3):
		terca=terca+1
	elif(vetor[i]==4):
		quarta=quarta+1
	elif(vetor[i]==5):
		quinta=quinta+1
	elif(vetor[i]==6):
		sexta=sexta+1
	elif(vetor[i]==7):
		sabado=sabado+1
	x=segunda+terca+quarta+quinta+sexta+sabado
	y=zero(i, dtype=float)
	for i in range(size(vetor)):
		print(((segunda/x)*100), 1)
		print(((terca/x)*100), 1)
		print(((quarta/x)*100), 1)
		print(((quinta/x)*100), 1)
		print(((sexta/x)*100), 1)
		print(((sabado/x)*100), 1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:00:23) 
-- CODE:
from numpy import*
vetor=array(eval(input("FAltas:")))
segunda=0
terca=0
quarta=0
quinta=0
sexta=0
sabado=0
for i in range(size(vetor)):
	if(vetor[i]==2):
		segunda=segunda+1
	elif(vetor[i]==3):
		terca=terca+1
	elif(vetor[i]==4):
		quarta=quarta+1
	elif(vetor[i]==5):
		quinta=quinta+1
	elif(vetor[i]==6):
		sexta=sexta+1
	elif(vetor[i]==7):
		sabado=sabado+1
	x=segunda+terca+quarta+quinta+sexta+sabado
	y=zero(6, dtype=float)
	for i in range(size(vetor)):
		print(((segunda/x)*100), 1)
		print(((terca/x)*100), 1)
		print(((quarta/x)*100), 1)
		print(((quinta/x)*100), 1)
		print(((sexta/x)*100), 1)
		print(((sabado/x)*100), 1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:00:35) 
-- CODE:
from numpy import*
vetor=array(eval(input("FAltas:")))
segunda=0
terca=0
quarta=0
quinta=0
sexta=0
sabado=0
for i in range(size(vetor)):
	if(vetor[i]==2):
		segunda=segunda+1
	elif(vetor[i]==3):
		terca=terca+1
	elif(vetor[i]==4):
		quarta=quarta+1
	elif(vetor[i]==5):
		quinta=quinta+1
	elif(vetor[i]==6):
		sexta=sexta+1
	elif(vetor[i]==7):
		sabado=sabado+1
	x=segunda+terca+quarta+quinta+sexta+sabado
	y=zeros(6, dtype=float)
	for i in range(size(vetor)):
		print(((segunda/x)*100), 1)
		print(((terca/x)*100), 1)
		print(((quarta/x)*100), 1)
		print(((quinta/x)*100), 1)
		print(((sexta/x)*100), 1)
		print(((sabado/x)*100), 1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:00:49) 
-- CODE:
from numpy import*
vetor=array(eval(input("FAltas:")))
segunda=0
terca=0
quarta=0
quinta=0
sexta=0
sabado=0
for i in range(size(vetor)):
	if(vetor[i]==2):
		segunda=segunda+1
	elif(vetor[i]==3):
		terca=terca+1
	elif(vetor[i]==4):
		quarta=quarta+1
	elif(vetor[i]==5):
		quinta=quinta+1
	elif(vetor[i]==6):
		sexta=sexta+1
	elif(vetor[i]==7):
		sabado=sabado+1
	x=segunda+terca+quarta+quinta+sexta+sabado
	y=zeros(6, dtype=float)
	for i in range(size(vetor)):
		print(((segunda/x)*100), 1)
		print(((terca/x)*100), 1)
		print(((quarta/x)*100), 1)
		print(((quinta/x)*100), 1)
		print(((sexta/x)*100), 1)
		print(((sabado/x)*100), 1)
-- EXECUTION TIME:
1.06512
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
50.0 1
50.0 1
0.0 1
0.0 1
0.0 1
0.0 1
50.0 1
50.0
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
100.0 1
0.0 1
0.0 1
0.0 1
0.0 1
0.0 1
66.666666666
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:04:19) 
-- CODE:
from numpy import*
vetor=array(eval(input("FAltas:")))
segunda=0
terca=0
quarta=0
quinta=0
sexta=0
sabado=0
for i in range(size(vetor)):
	if(vetor[i]==2):
		segunda=segunda+1
	elif(vetor[i]==3):
		terca=terca+1
	elif(vetor[i]==4):
		quarta=quarta+1
	elif(vetor[i]==5):
		quinta=quinta+1
	elif(vetor[i]==6):
		sexta=sexta+1
	elif(vetor[i]==7):
		sabado=sabado+1
	x=segunda+terca+quarta+quinta+sexta+sabado
	y=zeros(6, dtype=float)
	for i in range(size(z)):
		z[0]=round(((segunda/x)*100), 1)
		z[1]=(((terca/x)*100), 1)
		z[2]=(((quarta/x)*100), 1)
		z[3]=(((quinta/x)*100), 1)
		z[4]=(((sexta/x)*100), 1)
		z[5]=(((sabado/x)*100), 1)
	print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:05:38) 
-- CODE:
from numpy import*
vetor=array(eval(input("FAltas:")))
segunda=0
terca=0
quarta=0
quinta=0
sexta=0
sabado=0
for i in range(size(vetor)):
	if(vetor[i]==2):
		segunda=segunda+1
	elif(vetor[i]==3):
		terca=terca+1
	elif(vetor[i]==4):
		quarta=quarta+1
	elif(vetor[i]==5):
		quinta=quinta+1
	elif(vetor[i]==6):
		sexta=sexta+1
	elif(vetor[i]==7):
		sabado=sabado+1
	x=segunda+terca+quarta+quinta+sexta+sabado
	y=zeros(6, dtype=float)
	for i in range(size(z)):
		z[0]=round(((segunda/x)*100), 1)
		z[1]=round(((terca/x)*100), 1)
		z[2]=round(((quarta/x)*100), 1)
		z[3]=round(((quinta/x)*100), 1)
		z[4]=round(((sexta/x)*100), 1)
		z[5]=round(((sabado/x)*100), 1)
	print(z)
-- EXECUTION TIME:
1.08679
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2566/main.py", line 24, in <module>
    for i in range(size(z)):
NameError: name 'z' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:05:59) 
-- CODE:
from numpy import*
vetor=array(eval(input("FAltas:")))
segunda=0
terca=0
quarta=0
quinta=0
sexta=0
sabado=0
for i in range(size(vetor)):
	if(vetor[i]==2):
		segunda=segunda+1
	elif(vetor[i]==3):
		terca=terca+1
	elif(vetor[i]==4):
		quarta=quarta+1
	elif(vetor[i]==5):
		quinta=quinta+1
	elif(vetor[i]==6):
		sexta=sexta+1
	elif(vetor[i]==7):
		sabado=sabado+1
	x=segunda+terca+quarta+quinta+sexta+sabado
	y=zeros(6, dtype=float)
	for i in range(size(z)):
		z[0]=round(((segunda/x)*100), 1)
		z[1]=round(((terca/x)*100), 1)
		z[2]=round(((quarta/x)*100), 1)
		z[3]=round(((quinta/x)*100), 1)
		z[4]=round(((sexta/x)*100), 1)
		z[5]=round(((sabado/x)*100), 1)
	print(z)
-- EXECUTION TIME:
1.17011
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2566/main.py", line 24, in <module>
    for i in range(size(z)):
NameError: name 'z' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:06:42) 
-- CODE:
from numpy import*
vetor=array(eval(input("FAltas:")))
segunda=0
terca=0
quarta=0
quinta=0
sexta=0
sabado=0
for i in range(size(vetor)):
	if(vetor[i]==2):
		segunda=segunda+1
	elif(vetor[i]==3):
		terca=terca+1
	elif(vetor[i]==4):
		quarta=quarta+1
	elif(vetor[i]==5):
		quinta=quinta+1
	elif(vetor[i]==6):
		sexta=sexta+1
	elif(vetor[i]==7):
		sabado=sabado+1
	x=segunda+terca+quarta+quinta+sexta+sabado
	y=zeros(6, dtype=float)
	for i in range(size(y)):
		z[0]=round(((segunda/x)*100), 1)
		z[1]=round(((terca/x)*100), 1)
		z[2]=round(((quarta/x)*100), 1)
		z[3]=round(((quinta/x)*100), 1)
		z[4]=round(((sexta/x)*100), 1)
		z[5]=round(((sabado/x)*100), 1)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:07:08) 
-- CODE:
from numpy import*
vetor=array(eval(input("FAltas:")))
segunda=0
terca=0
quarta=0
quinta=0
sexta=0
sabado=0
for i in range(size(vetor)):
	if(vetor[i]==2):
		segunda=segunda+1
	elif(vetor[i]==3):
		terca=terca+1
	elif(vetor[i]==4):
		quarta=quarta+1
	elif(vetor[i]==5):
		quinta=quinta+1
	elif(vetor[i]==6):
		sexta=sexta+1
	elif(vetor[i]==7):
		sabado=sabado+1
	x=segunda+terca+quarta+quinta+sexta+sabado
	y=zeros(6, dtype=float)
	for i in range(size(y)):
		z[0]=round(((segunda/x)*100), 1)
		z[1]=round(((terca/x)*100), 1)
		z[2]=round(((quarta/x)*100), 1)
		z[3]=round(((quinta/x)*100), 1)
		z[4]=round(((sexta/x)*100), 1)
		z[5]=round(((sabado/x)*100), 1)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:07:13) 
-- CODE:
from numpy import*
vetor=array(eval(input("FAltas:")))
segunda=0
terca=0
quarta=0
quinta=0
sexta=0
sabado=0
for i in range(size(vetor)):
	if(vetor[i]==2):
		segunda=segunda+1
	elif(vetor[i]==3):
		terca=terca+1
	elif(vetor[i]==4):
		quarta=quarta+1
	elif(vetor[i]==5):
		quinta=quinta+1
	elif(vetor[i]==6):
		sexta=sexta+1
	elif(vetor[i]==7):
		sabado=sabado+1
	x=segunda+terca+quarta+quinta+sexta+sabado
	y=zeros(6, dtype=float)
	for i in range(size(y)):
		z[0]=round(((segunda/x)*100), 1)
		z[1]=round(((terca/x)*100), 1)
		z[2]=round(((quarta/x)*100), 1)
		z[3]=round(((quinta/x)*100), 1)
		z[4]=round(((sexta/x)*100), 1)
		z[5]=round(((sabado/x)*100), 1)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:08:21) 
-- CODE:
from numpy import*
vetor=array(eval(input("FAltas:")))
segunda=0
terca=0
quarta=0
quinta=0
sexta=0
sabado=0
for i in range(size(vetor)):
	if(vetor[i]==2):
		segunda=segunda+1
	elif(vetor[i]==3):
		terca=terca+1
	elif(vetor[i]==4):
		quarta=quarta+1
	elif(vetor[i]==5):
		quinta=quinta+1
	elif(vetor[i]==6):
		sexta=sexta+1
	elif(vetor[i]==7):
		sabado=sabado+1
	x=segunda+terca+quarta+quinta+sexta+sabado
	y=zeros(6, dtype=float)
	for i in range(size(y)):
		z[0]=round(((segunda/x)*100), 1)
		z[1]=round(((terca/x)*100), 1)
		z[2]=round(((quarta/x)*100), 1)
		z[3]=round(((quinta/x)*100), 1)
		z[4]=round(((sexta/x)*100), 1)
		z[5]=round(((sabado/x)*100), 1)
	print(y)
-- EXECUTION TIME:
1.15404
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2566/main.py", line 25, in <module>
    z[0]=round(((segunda/x)*100), 1)
NameError: name 'z' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:11:36) 
-- CODE:
from numpy import*
vetor=array(eval(input("FAltas:")))
segunda=0
terca=0
quarta=0
quinta=0
sexta=0
sabado=0
for i in range(size(vetor)):
	if(vetor[i]==2):
		segunda=segunda+1
	elif(vetor[i]==3):
		terca=terca+1
	elif(vetor[i]==4):
		quarta=quarta+1
	elif(vetor[i]==5):
		quinta=quinta+1
	elif(vetor[i]==6):
		sexta=sexta+1
	elif(vetor[i]==7):
		sabado=sabado+1
x=segunda+terca+quarta+quinta+sexta+sabado
y=zeros(6, dtype=float)
for i in range(size(y)):
	z[0]=round(((segunda/x)*100), 1)
	z[1]=round(((terca/x)*100), 1)
	z[2]=round(((quarta/x)*100), 1)
	z[3]=round(((quinta/x)*100), 1)
	z[4]=round(((sexta/x)*100), 1)
	z[5]=round(((sabado/x)*100), 1)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:11:41) 
-- CODE:
from numpy import*
vetor=array(eval(input("FAltas:")))
segunda=0
terca=0
quarta=0
quinta=0
sexta=0
sabado=0
for i in range(size(vetor)):
	if(vetor[i]==2):
		segunda=segunda+1
	elif(vetor[i]==3):
		terca=terca+1
	elif(vetor[i]==4):
		quarta=quarta+1
	elif(vetor[i]==5):
		quinta=quinta+1
	elif(vetor[i]==6):
		sexta=sexta+1
	elif(vetor[i]==7):
		sabado=sabado+1
x=segunda+terca+quarta+quinta+sexta+sabado
y=zeros(6, dtype=float)
for i in range(size(y)):
	z[0]=round(((segunda/x)*100), 1)
	z[1]=round(((terca/x)*100), 1)
	z[2]=round(((quarta/x)*100), 1)
	z[3]=round(((quinta/x)*100), 1)
	z[4]=round(((sexta/x)*100), 1)
	z[5]=round(((sabado/x)*100), 1)
print(y)
-- EXECUTION TIME:
1.02569
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2566/main.py", line 25, in <module>
    z[0]=round(((segunda/x)*100), 1)
NameError: name 'z' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:16:32) 
-- CODE:
from numpy import*
vetor=array(eval(input("FAltas:")))
segunda=0
terca=0
quarta=0
quinta=0
sexta=0
sabado=0
for i in range(size(vetor)):
	if(vetor[i]==2):
		segunda=segunda+1
	elif(vetor[i]==3):
		terca=terca+1
	elif(vetor[i]==4):
		quarta=quarta+1
	elif(vetor[i]==5):
		quinta=quinta+1
	elif(vetor[i]==6):
		sexta=sexta+1
	elif(vetor[i]==7):
		sabado=sabado+1
x=segunda+terca+quarta+quinta+sexta+sabado
y=zeros(6, dtype=float)
for i in range(size(y)):
	y[0]=round(((segunda/x)*100), 1)
	y[1]=round(((terca/x)*100), 1)
	y[2]=round(((quarta/x)*100), 1)
	y[3]=round(((quinta/x)*100), 1)
	y[4]=round(((sexta/x)*100), 1)
	y[5]=round(((sabado/x)*100), 1)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:16:37) 
-- CODE:
from numpy import*
vetor=array(eval(input("FAltas:")))
segunda=0
terca=0
quarta=0
quinta=0
sexta=0
sabado=0
for i in range(size(vetor)):
	if(vetor[i]==2):
		segunda=segunda+1
	elif(vetor[i]==3):
		terca=terca+1
	elif(vetor[i]==4):
		quarta=quarta+1
	elif(vetor[i]==5):
		quinta=quinta+1
	elif(vetor[i]==6):
		sexta=sexta+1
	elif(vetor[i]==7):
		sabado=sabado+1
x=segunda+terca+quarta+quinta+sexta+sabado
y=zeros(6, dtype=float)
for i in range(size(y)):
	y[0]=round(((segunda/x)*100), 1)
	y[1]=round(((terca/x)*100), 1)
	y[2]=round(((quarta/x)*100), 1)
	y[3]=round(((quinta/x)*100), 1)
	y[4]=round(((sexta/x)*100), 1)
	y[5]=round(((sabado/x)*100), 1)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:16:48) 
-- CODE:
from numpy import*
vetor=array(eval(input("FAltas:")))
segunda=0
terca=0
quarta=0
quinta=0
sexta=0
sabado=0
for i in range(size(vetor)):
	if(vetor[i]==2):
		segunda=segunda+1
	elif(vetor[i]==3):
		terca=terca+1
	elif(vetor[i]==4):
		quarta=quarta+1
	elif(vetor[i]==5):
		quinta=quinta+1
	elif(vetor[i]==6):
		sexta=sexta+1
	elif(vetor[i]==7):
		sabado=sabado+1
x=segunda+terca+quarta+quinta+sexta+sabado
y=zeros(6, dtype=float)
for i in range(size(y)):
	y[0]=round(((segunda/x)*100), 1)
	y[1]=round(((terca/x)*100), 1)
	y[2]=round(((quarta/x)*100), 1)
	y[3]=round(((quinta/x)*100), 1)
	y[4]=round(((sexta/x)*100), 1)
	y[5]=round(((sabado/x)*100), 1)
print(y)
-- EXECUTION TIME:
1.23649
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
